# events-face

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/core/: asgi.py  models.py  settings.py  urls.py  wsgi.py
src/events/: admin.py  apps.py  models.py  notification_service.py  serializers.py  urls.py  views.py
src/events/auth_app/: serializers.py  urls.py  views.py
src/events/migrations/: 0001_initial.py  0002_remove_placeadmin_place_ptr_delete_eventadmin_and_more.py  0003_eventregistration.py
src/sync/: admin.py  apps.py  models.py  outbox_services.py  outbox_worker.py  serializers.py  services.py  urls.py  views.py
src/sync/management/commands/: run_outbox_worker.py  sync_events.py
src/sync/migrations/: 0001_initial.py  0002_outboxmessage.py  0003_remove_outboxmessage_sync_outbox_sent_at_5a36d8_idx_and_more.py  0004_syncsettings_sent.py  0005_outboxmessage_error_message_and_more.py
