[project]
name = "event-face"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2.6",
    "psycopg2-binary",
    "djangorestframework",
    "djangorestframework-simplejwt",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint.isort]
known-first-party = ["core", "events", "events.auth_app"]